# ndtensorflow

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/ndtensorflow/: _array.py  _info.py  _namespace.py  fft.py  linalg.py
tests/: test_array.py
